# stock-prices

./: .gitignore  Dockerfile  copy-files.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json
src/: index.html  main.ts  renderer.ts
src-rust/: Cargo.toml  lib.rs
src-rust/src/: lib.rs
src/components/: stock-graph.ts  stock-table.ts
src/types/: custom-elements.d.ts  stock_renderer.d.ts
test-e2e/: app.spec.ts  fixtures.ts  global.d.ts
